<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:gravity="center"
    android:background="@color/white">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_huelluditos"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tvWelcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/tvWelcomeSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_subtitle"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginBottom="60dp" />

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:backgroundTint="@color/primary_color"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="15dp" />

</LinearLayout>
